Scrollbar in main.css, Header fixiert

--- a/css/help.css
+++ b/css/help.css
@@ -51,3 +51,8 @@
     font-size: 20px;
     font-weight: 700;
 }
+
+.mainContainer {
+    height: calc(100vh - 80px);
+    overflow: auto;
+}
