--- a/css/legalNotice.css
+++ b/css/legalNotice.css
@@ -45,3 +45,8 @@
 .secondPart {
     margin-top: 16px;
 }
+
+.mainContainer {
+    height: calc(100vh - 80px);
+    overflow: auto;
+}
