--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,21 @@ body{
   src: url(../fonts/Inter-VariableFont_slnt\wght.ttf);
 }
 
+/* Scrollbar */
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 24px;
+  background-color: #A8A8A8;
+}
+
+/* Scrollbar Ende */
+
 .headerProfileIcon {
   width: 40px;
   height: 40px;
